--- a/register-login-frontend/login.html
+++ b/register-login-frontend/login.html
@@ -6,8 +6,8 @@
 <body>
     <div>
         <form id="login_page">
-            <input class="email_login" type="email" id="email_login" name="email_login">
-            <input class="password_login" type="text" id="password_login" name="password_login">
+            <input class="email_login" type="email" id="email_login" name="email_login" required>
+            <input class="password_login" type="text" id="password_login" name="password_login" required>
             <input class="submit_login" type="submit" id="submit_login" name="submit_login" value="Login">
             <input class="google" type="submit" id="google" name="google" value="Sign In With Google">
         </form>
