--- a/register-login-frontend/register.html
+++ b/register-login-frontend/register.html
@@ -7,12 +7,12 @@
     <div class="register">
         <form id="register_page">
             <div class="names_register">
-                <input class="fname" type="fname" id="fname" name="fname">
-                <input class="lname" type="lname" id="lname" name="lname">
+                <input class="fname" type="fname" id="fname" name="fname" required placeholder="First Name">
+                <input class="lname" type="lname" id="lname" name="lname" required placeholder="Last Name">
             </div>
-            <input class="email_register" type="email" id="email_register" name="email_register">
-            <input class="new_password_register" type="text" id="new_password_register" name="new_password_register">
-            <input class="repeat_password_register" type="text" id="repeat_password_register" name="repeat_password_register">
+            <input class="email_register" type="email" id="email_register" name="email_register" required placeholder="Email">
+            <input class="new_password_register" type="text" id="new_password_register" name="new_password_register" required placeholder="Password">
+            <input class="repeat_password_register" type="text" id="repeat_password_register" name="repeat_password_register" required placeholder="Repeat Password">
             <input class="submit_register" type="submit" id="submit_register" name="submit_register">
             <input class="google" type="submit" id="google" name="google" value="Sign Up With Google">
         </form>
