--- a/home-page/home.html
+++ b/home-page/home.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    
+    <div class="header" id="header">
+        <div class="nav_bar" id="nav_bar">
+
+        </div>
+    </div>
+    <div class="feed" id="feed">
+
+    </div>
 </body>
 </html>
