create post changes

--- a/register-login-frontend/login.html
+++ b/register-login-frontend/login.html
@@ -13,7 +13,7 @@
         </form>
     </div>
 
-    <a href="../home-page/home.html" id="search"></a>
+    <a href="../home-page/src/app/app.component.html" id="search"></a>
 
     <script>
         document.getElementById('login_page').addEventListener('submit', function(event) {
